Implement person predicate stub in FindCommandTest